--- a/BadBrokerTest/Views/Home/Result.cshtml
+++ b/BadBrokerTest/Views/Home/Result.cshtml
@@ -1,8 +1,6 @@
 ﻿@model IEnumerable<BadBrokerTest.Models.Rate>
 
-@{
-    ViewBag.Title = "Result";
-}
+<h2>Results</h2>
 <h4>Rates</h4>
 <table class="table">
     <tr>
