--- a/BadBrokerTest/Views/Home/Index.cshtml
+++ b/BadBrokerTest/Views/Home/Index.cshtml
@@ -4,32 +4,31 @@
     ViewBag.Title = "Index";
 }
 
-@using (Html.BeginForm("Result", "Home",FormMethod.Post, new { @class="form-horizontal", role="form" }))
-{
-    <div class="form-group">
-        @Html.LabelFor(m => m.DateFrom, new {@class="col-sm-2 control-label"})
-        <div class="col-sm-10">
-            @Html.EditorFor(m => m.DateFrom, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.DateFrom)
+    @using (Ajax.BeginForm("Result", null, new AjaxOptions {UpdateTargetId = "results"}, new {@class = "form-horizontal", role = "form"}))
+    {
+        <div class="form-group">
+            @Html.LabelFor(m => m.DateFrom, new {@class = "col-sm-2 control-label"})
+            <div class="col-sm-10">
+                @Html.EditorFor(m => m.DateFrom, new {htmlAttributes = new {@class = "form-control"}})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.DateTill, new { @class = "col-sm-2 control-label" })
-        <div class="col-sm-10">
-            @Html.EditorFor(m => m.DateTill, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(m => m.DateTill)
+        <div class="form-group">
+            @Html.LabelFor(m => m.DateTill, new {@class = "col-sm-2 control-label"})
+            <div class="col-sm-10">
+                @Html.EditorFor(m => m.DateTill, new {htmlAttributes = new {@class = "form-control"}})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Amount, new {@class = "col-sm-2 control-label"})
-        <div class="col-sm-10">
-            @Html.EditorFor(m => m.Amount, new {htmlAttributes = new {@class = "form-control"}})
-            @Html.ValidationMessageFor(m => m.Amount)
+        <div class="form-group">
+            @Html.LabelFor(m => m.Amount, new {@class = "col-sm-2 control-label"})
+            <div class="col-sm-10">
+                @Html.EditorFor(m => m.Amount, new {htmlAttributes = new {@class = "form-control"}})
+            </div>
         </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-2 col-sm-10">
-            <button type="submit" class="btn btn-default">Submit</button>
+        <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+                <button type="submit" class="btn btn-default" id="btnSubmit">Submit</button>
+            </div>
         </div>
-    </div>
-}
+    }
+
+<div id="results"></div>
