--- a/BadBrokerTest/Views/Home/Index.cshtml
+++ b/BadBrokerTest/Views/Home/Index.cshtml
@@ -4,24 +4,30 @@
     ViewBag.Title = "Index";
 }
 
-    @using (Ajax.BeginForm("Result", null, new AjaxOptions {UpdateTargetId = "results"}, new {@class = "form-horizontal", role = "form"}))
+    @using (Ajax.BeginForm("Result", null, new AjaxOptions { UpdateTargetId = "results" }, new { @class = "form-horizontal", role = "form", id = "inputForm" }))
     {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true)
+        
         <div class="form-group">
             @Html.LabelFor(m => m.DateFrom, new {@class = "col-sm-2 control-label"})
             <div class="col-sm-10">
                 @Html.EditorFor(m => m.DateFrom, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(m => m.DateFrom)
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.DateTill, new {@class = "col-sm-2 control-label"})
             <div class="col-sm-10">
                 @Html.EditorFor(m => m.DateTill, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(m => m.DateTill)
             </div>
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.Amount, new {@class = "col-sm-2 control-label"})
             <div class="col-sm-10">
                 @Html.EditorFor(m => m.Amount, new {htmlAttributes = new {@class = "form-control"}})
+                @Html.ValidationMessageFor(m => m.Amount)
             </div>
         </div>
         <div class="form-group">
