--- a/BadBrokerTest/Views/Shared/_Layout.cshtml
+++ b/BadBrokerTest/Views/Shared/_Layout.cshtml
@@ -16,14 +16,17 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jqueryajax")
     @Scripts.Render("~/bundles/bootstrap")
     <script>
-    $(document).ready(function() {
-        $("#btnSubmit").click(function() {
-            $("#results").text("Loading...");
+        $(document).ready(function() {
+            $("#btnSubmit").click(function() {
+                if ($("#inputForm").valid()) {
+                    $("#results").text("Loading...");
+                }
+            });
         });
-    });
     </script>
     @RenderSection("scripts", required: false)
 </body>
